--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BABRN Turbo | Restore Archives</title>
+    <title>BABRN Turbo | Final Fix</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -19,23 +19,17 @@
             --nav-bg: #002b5c; 
         }
 
-        body.theme-light {
-            --bg-body: #f1f5f9;
-            --bg-glass: rgba(255, 255, 255, 0.6); 
-            --text-main: #001f3f; 
-            --accent: #059669; 
-            --input-bg: rgba(255, 255, 255, 0.8);
-            --border: rgba(0, 31, 63, 0.1);
-            --nav-bg: #001f3f; 
-        }
-
-        body { font-family: 'Plus+Jakarta+Sans', sans-serif; background: var(--bg-body); color: var(--text-main); transition: all 0.3s ease; }
+        body { font-family: 'Plus Jakarta Sans', sans-serif; background: var(--bg-body); color: var(--text-main); transition: all 0.3s ease; }
         .glass-panel { background: var(--bg-glass); backdrop-filter: blur(15px); border: 1px solid var(--border); box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
         .medical-canvas { font-family: 'JetBrains Mono', monospace; background: var(--input-bg); color: var(--text-main); line-height: 1.8; border: 1px solid var(--border); }
         .input-accent { background: var(--input-bg); border: 1px solid var(--border); color: var(--text-main); }
         .nav-custom { background: var(--nav-bg); color: white; }
         .word-badge { background: var(--accent); color: white; padding: 2px 10px; border-radius: 20px; font-size: 10px; font-weight: 800; }
         .active-tab { color: #10b981; border-bottom: 2px solid #10b981; }
+        
+        /* Delete Button Style */
+        .btn-delete { color: #ef4444; transition: all 0.2s; }
+        .btn-delete:hover { color: #f87171; transform: scale(1.1); }
     </style>
 </head>
 <body class="min-h-screen pb-10">
@@ -62,14 +56,14 @@
             <div class="lg:col-span-3 space-y-4 no-print">
                 <div class="glass-panel p-6 rounded-3xl">
                     <button id="start-btn" class="w-full font-bold py-4 rounded-2xl mb-4 uppercase flex items-center justify-center gap-2" style="background: var(--accent); color: white;">
-                        <i class="fas fa-play"></i> Start Record
+                        <i class="fas fa-play"></i> Start Transcribing
                     </button>
                     <button id="stop-btn" class="hidden w-full bg-red-600 text-white font-bold py-4 rounded-2xl mb-4 animate-pulse uppercase flex items-center justify-center gap-2">
                         <i class="fas fa-stop"></i> Stop & Save
                     </button>
-                    <div id="status-display" class="text-[9px] text-center font-bold py-1 px-3 rounded-full bg-black/20 mb-4 opacity-50 uppercase">Ready</div>
+                    <div id="status-display" class="text-[9px] text-center font-bold py-1 px-3 rounded-full bg-black/20 mb-4 opacity-50 uppercase tracking-widest">Ready</div>
                     <div class="space-y-3 pt-4 border-t border-white/10">
-                        <button onclick="copyAllText()" class="w-full py-3 rounded-xl text-[10px] font-bold uppercase border border-white/10 hover:bg-black/5">Copy</button>
+                        <button onclick="copyAllText()" class="w-full py-3 rounded-xl text-[10px] font-bold uppercase border border-white/10 hover:bg-black/5">Copy Text</button>
                         <button onclick="syncToGoogle()" id="cloud-btn" class="w-full bg-blue-700 text-white font-bold py-4 rounded-xl text-[10px] uppercase">Manual Sync</button>
                     </div>
                 </div>
@@ -93,14 +87,14 @@
                             <span id="word-count" class="word-badge">0</span>
                         </div>
                     </div>
-                    <textarea id="output" oninput="updateWordCount()" class="medical-canvas w-full h-[550px] p-8 rounded-2xl text-lg focus:outline-none resize-none shadow-inner" placeholder="Transcription..."></textarea>
+                    <textarea id="output" oninput="updateWordCount()" class="medical-canvas w-full h-[550px] p-8 rounded-2xl text-lg focus:outline-none resize-none shadow-inner" placeholder="Your words will appear here as you speak..."></textarea>
                 </div>
             </div>
         </div>
 
         <div id="view-library" class="hidden no-print">
             <div class="glass-panel rounded-3xl p-8 min-h-[600px]">
-                <h2 class="text-xl font-bold mb-8 uppercase tracking-widest">Archives</h2>
+                <h2 class="text-xl font-bold mb-8 uppercase tracking-widest">Saved Archives</h2>
                 <div id="library-list" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
             </div>
         </div>
@@ -110,10 +104,15 @@
         const SCRIPT_URL = "https://script.google.com/macros/s/AKfycby6ZIAuBnLUogVY6UxY-4TNb3Zy7iRCVi56UtpfkLg79LXbiTo97PnroSo96lvBS3FF/exec";
         let db, isRecording = false, finalTranscript = "", autoSaveTimer;
 
+        // SPEECH ENGINE
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-        recognition.continuous = true; recognition.interimResults = true; recognition.lang = 'en-US';
+        recognition.continuous = true; 
+        recognition.interimResults = true; 
+        recognition.lang = 'en-US';
 
+        recognition.onstart = () => { document.getElementById('status-display').innerText = "LIVE TRANScribing..."; };
         recognition.onend = () => { if (isRecording) recognition.start(); };
+        
         recognition.onresult = (e) => {
             let interim = "";
             for (let i = e.resultIndex; i < e.results.length; ++i) {
@@ -124,23 +123,33 @@
             updateWordCount();
         };
 
+        // DATABASE SETUP
         const request = indexedDB.open("BABRN_FULL_V1", 1);
         request.onupgradeneeded = e => { e.target.result.createObjectStore("sessions", { keyPath: "id" }); };
-        request.onsuccess = e => { db = e.target.result; document.getElementById('session-date-picker').valueAsDate = new Date(); loadLibrary(); };
+        request.onsuccess = e => { 
+            db = e.target.result; 
+            document.getElementById('session-date-picker').valueAsDate = new Date(); 
+            loadLibrary(); 
+        };
 
+        // RECORD CONTROLS
         document.getElementById('start-btn').onclick = () => {
-            isRecording = true; recognition.start();
+            isRecording = true; 
+            finalTranscript = document.getElementById('output').value; // Keep existing text if any
+            recognition.start();
             autoSaveTimer = setInterval(syncToGoogle, 300000); 
             document.getElementById('start-btn').classList.add('hidden');
             document.getElementById('stop-btn').classList.remove('hidden');
         };
 
         document.getElementById('stop-btn').onclick = () => {
-            isRecording = false; recognition.stop();
+            isRecording = false; 
+            recognition.stop();
             clearInterval(autoSaveTimer);
             saveToLocal();
             document.getElementById('start-btn').classList.remove('hidden');
             document.getElementById('stop-btn').classList.add('hidden');
+            document.getElementById('status-display').innerText = "Saved to Archives";
         };
 
         function saveToLocal() {
@@ -156,6 +165,7 @@
             loadLibrary();
         }
 
+        // UPDATED ARCHIVE LIST WITH DELETE BUTTON
         function loadLibrary() {
             const list = document.getElementById('library-list');
             list.innerHTML = "";
@@ -163,9 +173,17 @@
                 const cursor = e.target.result;
                 if (cursor) {
                     const div = document.createElement('div');
-                    div.className = "glass-panel p-4 rounded-2xl cursor-pointer hover:border-emerald-500 transition-all";
-                    div.innerHTML = `<h3 class="font-bold text-sm uppercase">${cursor.value.title}</h3><p class="text-[9px] opacity-60 uppercase">${cursor.value.sessionDate}</p>`;
-                    div.onclick = () => openEntry(cursor.value.id);
+                    div.className = "glass-panel p-5 rounded-2xl flex justify-between items-start border border-white/5 hover:border-emerald-500 transition-all";
+                    div.innerHTML = `
+                        <div onclick="openEntry(${cursor.value.id})" class="cursor-pointer flex-1">
+                            <h3 class="font-bold text-sm uppercase text-emerald-400">${cursor.value.title}</h3>
+                            <p class="text-[9px] opacity-60 uppercase mt-1">${cursor.value.sessionDate}</p>
+                            <p class="text-[8px] opacity-40 mt-1">BY: ${cursor.value.preparedBy}</p>
+                        </div>
+                        <button onclick="deleteEntry(${cursor.value.id})" class="btn-delete ml-4 p-2">
+                            <i class="fas fa-trash-alt"></i>
+                        </button>
+                    `;
                     list.appendChild(div);
                     cursor.continue();
                 }
@@ -186,14 +204,19 @@
             };
         }
 
+        function deleteEntry(id) {
+            if(confirm("Are you sure you want to delete this archive?")) {
+                db.transaction("sessions", "readwrite").objectStore("sessions").delete(id);
+                loadLibrary();
+            }
+        }
+
+        // UTILITIES
         async function syncToGoogle() {
             const indicator = document.getElementById('autosave-indicator');
             indicator.classList.remove('hidden');
             const payload = {
                 title: document.getElementById('session-title').value,
-                department: document.getElementById('session-dept').value,
-                preparedBy: document.getElementById('session-prepared-by').value,
-                sessionDate: document.getElementById('session-date-picker').value,
                 text: document.getElementById('output').value
             };
             fetch(SCRIPT_URL, { method: 'POST', mode: 'no-cors', body: JSON.stringify(payload) })
@@ -205,12 +228,6 @@
             document.getElementById('word-count').innerText = text ? text.split(/\s+/).length : 0;
         }
 
-        function setTheme(theme) {
-            document.body.className = theme === 'light' ? 'theme-light' : '';
-            localStorage.setItem('babrn-theme', theme);
-        }
-        setTheme(localStorage.getItem('babrn-theme') || 'dark');
-
         function switchTab(t) {
             document.getElementById('view-recorder').classList.toggle('hidden', t !== 'recorder');
             document.getElementById('view-library').classList.toggle('hidden', t !== 'library');
@@ -221,7 +238,7 @@
 
         function insertTimestamp() { document.getElementById('output').value += `\n[${new Date().toLocaleTimeString()}] `; }
         function copyAllText() { navigator.clipboard.writeText(document.getElementById('output').value); alert("Copied!"); }
-        function prepareNewSession() { if(confirm("Refresh for new session?")) location.reload(); }
+        function prepareNewSession() { if(confirm("Refresh for a new session? (Ensure you saved the current one)")) location.reload(); }
     </script>
 </body>
 </html>
